--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -135,13 +135,22 @@ blockquote p {
 	padding:0px;
 }
 .index-photoframe {
-  	position: relative;
-    display: block;
-    img {
-    	width: 100%;
-    	display: block;
-      border-radius: 5px;
-    }
+	position: relative;
+  display: block;
+  img {
+  	width: 100%;
+  	display: block;
+    border-radius: 5px;
+  }
+}
+
+.carousel {
+  background-color: rgba(0,0,0,0.1);    
+}   
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {    
+  height: 550px;    
+  width: 100%;    
 }
 
 .carousel-caption {
