--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -102,7 +102,7 @@ h1 {
   font-family: montserratultra_light, Arial, sans-serif;
   font-size: 36px;
   text-align: center;
-  padding-top: 50px;
+  //padding-top: 50px;
   padding-bottom: 30px;
 }
 blockquote {
