--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,17 +1,17 @@
 
-//  .booyah-box {
-// // 	-moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-// // 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-// // 	box-shadow: 1px 1px 2px 0 #d0d0d0;
-// // 	background: #fff;
-// // 	border: 1px solid #ccc;
-// // 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-// //   // border-radius: 5px;
-// // 	margin-top:1px;
-// //	margin-bottom:70px;
-// // 	padding:15px;
-// // 	border:10px;
-//  }
+ .booyah-box {
+ 	-moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+ 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+ 	box-shadow: 1px 1px 2px 0 #d0d0d0;
+ 	background: #fff;
+ 	border: 1px solid #ccc;
+ 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  border-radius: 5px;
+ 	margin-top:1px;
+	margin-bottom:70px;
+ 	padding:15px;
+ 	border:10px;
+ }
 
 
 .header-box {
