--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -7,8 +7,8 @@
  	// border: 1px solid #ccc;
  	// border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   // border-radius: 5px;
- 	// margin-top:1px;
-	margin-bottom:70px;
+ 	margin-top:30px;
+	margin-bottom:30px;
  	padding:15px;
  	// border:10px;
  }
