--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -45,7 +45,7 @@
 <hr />
 <!-- Places -->
 <% @places.each do |place| %>
-  <div class="booyah-box col-xs-10 col-xs-offset-1"> 
+  <div class="booyah-box col-xs-10"> 
 	<div class="col-sm-8 col-xs-12">
 	  <h2><%= link_to place.name, place_path(place) %></h2>
 	  <br />
