--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -256,13 +256,14 @@ div.pagination ul {
 //   text-align: right;
 // }
 .comments {
-  background-color: #339966;
+  // background-color: #339966;
+  background: url('stardust.png');
   margin-top: 40px;
   margin-bottom: 10px;
 }
 
 .photos {
-  background-color: #339966;
+  background: url('stardust.png');
   margin-top: 40px;
   margin-bottom: 10px;
 }
