--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -102,14 +102,11 @@ function initMap() {
   </div>
 </div>
 
-<div class="col-xs-10 col-xs-offset-1">
+<!-- <div class="col-xs-10 col-xs-offset-1"> -->
   <!-- Button trigger modal -->
 <!--   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
   </button> -->
-
-
-<div class="clear"></div>
 
 <div class="photos">
   <h1 class="photos pull-left">Photos</h1>
@@ -124,12 +121,13 @@ function initMap() {
 
   <% end %> 
   </div>
-</div>
+<!-- </div> -->
 
       
 <div class="clear"></div>
-<div class="col-xs-10 col-xs-offset-1">
+<!-- <div class="col-xs-10 col-xs-offset-1"> -->
 <div class="comments">
+
   <h1 class="comments pull-left">Comments</h1>
   <div class="clear"></div>
 
@@ -146,5 +144,5 @@ function initMap() {
 
 <% end %>
   </div>
-  </div>
+<!--   </div> -->
  <div class="clear"></div>
