--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,8 +1,3 @@
-// .places-index.booyah-box.col-xs-12 {
-//   margin-top:10px;
-//   margin-bottom:10px;
-// }
-
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -17,50 +12,18 @@
   border:10px;
 }
 
-// .place-booyah-box {
-//   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-//   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-//   box-shadow: 1px 1px 2px 0 #d0d0d0;
-//   border: 1px solid #ccc;
-//   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-//   border:10px;
-// }
-
 .place-title {
-  // background: white;
-  // border-left: 10px solid #ccc;
-  // margin: 1.5em 10px;
-  // padding: 0.5em 10px;
-  // border-top-left-radius: 5px;
-  // border-top-right-radius: 5px;
-    background: #f9f9f9;
-  // border-left: 10px solid #ccc;
+  background: #f9f9f9;
   border-radius: 5px;
-  // margin: 1.5em 10px;
   padding: 0.5em 10px;
-  //   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // background: #f9f9f9;
-  // border: 1px solid #ccc;
-  // border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  // border-radius: 5px;
-  // margin-top:30px;
-  // margin-bottom:30px;
-  // padding:15px;
-  // border-bottom:10px solid gray;
-   border-top-left-radius: 5px;
-   border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .place-title h1 {
-  // background: white;
   color: #595959;
-  // padding: 20px;
-     border-top-left-radius: 5px;
-   border-top-right-radius: 5px;
-  // border-radius: 5px;
-
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .col-xs-12, .col-sm-4 {
@@ -89,24 +52,21 @@ h1, h2, h3, h4 {
 	padding:0;
 }
 
-body {
-	// background: url('paper_1.png'); 
-	font-family: montserratultra_light, Arial, sans-serif;
-}
 .navbar.navbar-inverse {
 	background: url('/assets/noisy_net.png');
 	border-radius: 0;
 	margin-bottom: 0;
   font-size: 18px;
 }
+
 .navbar-inverse .navbar-nav > li > a {
     color: #cecece;
 }
+
 .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     color: #339966 !important;
     background-color: transparent;
 }
-
 
 .navbar-inverse .navbar-brand {
 	color: #339966;
@@ -114,6 +74,7 @@ body {
 	font-size: 26px;
 	font-weight: bold;
 }
+
 button.btn.btn-default.navbar-btn {
   background-color: #26734d;
   font-size: 18px;
@@ -125,17 +86,16 @@ button.btn.btn-primary.pull-right {
     border-color: #2e6da4;
     margin-top: 20px;
 }
+
 .field_with_errors {
 	color: #ff3333;
 	background-color: #FFEEEE;
 	border-radius: 3px;
 	padding: 8px;
 }
+
 #map {
   height: 500px;
-}
-#map-popup-pane {
-  
 }
 
 .clear {
@@ -151,19 +111,20 @@ blockquote {
   border-radius: 5px;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
-  // quotes: "\201C""\201D""\2018""\2019";
 }
+
 blockquote:before {
   color: #ccc;
-  // content: open-quote;
   font-size: 3em;
   line-height: 0.1em;
   margin-right: 0.25em;
   vertical-align: -0.4em;
 }
+
 blockquote p {
   display: inline;
 }
+
 .photoframe {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -173,6 +134,7 @@ blockquote p {
 	margin-bottom:0px;
 	padding:0px;
 }
+
 .index-photoframe {
 	position: relative;
   display: block;
@@ -201,40 +163,60 @@ blockquote p {
 	position:absolute;
 	left:0;
 }
+
 .pagination-wrapper {
 	width: 300px;
 	margin: auto; 
   text-align: center;
 }
+
 .pagination {
-	font-family: montserratultra_light, Arial, sans-serif;
 	font-size: 14px;
 }
-
-// .background-lightgray {
-//   background-color: #eeeeee;
-// }
 
 a {
   color: #0088cc;
   text-decoration: none;
 }
+
 a:hover {
   color: #339966;
   text-decoration: underline;
 }
 
-h2 { padding-top: 20px; }
-h2:first-of-type { padding-top: 0; }
+h2 { 
+  padding-top: 20px; 
+}
+
+h2:first-of-type { 
+  padding-top: 0; 
+}
 
 ul { 
   padding: 0;
   margin-bottom: 0;
 }
 
+div.pagination ul { 
+  padding: 0;
+  display: inline-block;
+  margin-bottom: 0;
+  *display: inline;   
+  /* IE7 inline-block hack */     
+  *zoom: 1;   
+  text-align: center;   
+  -webkit-border-radius: 3px;   
+  -moz-border-radius: 3px;    
+  border-radius: 3px;   
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);    
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);   
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
 .pagination li {
   display: inline;
 }
+
 .pagination a {
   padding: 5px 14px;
   line-height: 34px;
@@ -244,14 +226,17 @@ ul {
   border-left-width: 0;
   border-radius: 5px;
 }
+
 .pagination a:hover,
 .pagination .active a {
   background-color: white;
 }
+
 .pagination .active a {
   color: #999999;
   cursor: default;
 }
+
 .pagination .disabled span,
 .pagination .disabled a,
 .pagination .disabled a:hover {
@@ -266,11 +251,13 @@ ul {
   -moz-border-radius: 3px 0 0 3px;
   border-radius: 3px 0 0 3px;
 }
+
 .pagination li:last-child a {
   -webkit-border-radius: 0 3px 3px 0;
   -moz-border-radius: 0 3px 3px 0;
   border-radius: 0 3px 3px 0;
 }
+
 .pagination-centered {
   text-align: center;
 }
@@ -286,10 +273,12 @@ ul {
   margin-top: 40px;
   margin-bottom: 10px;
 }
+
 h1.comments.pull-left {
   color: white;
   margin-left: 20px;
 }
+
 h1.photos.pull-left {
   color: white;
   margin-left: 20px;
@@ -329,13 +318,13 @@ hr {
 img.img-responsive {
   vertical-align: center;
 }
+
 .place-photo {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
   position: relative;
   display: block;
-  // border: 10px solid #f9f9f9;
   background-color: #f9f9f9;
   padding-left: 10px;
   padding-top: 10px;
@@ -348,6 +337,7 @@ img.img-responsive {
 .carousel {
   background-color: rgba(0,0,0,0.1);
 }
+
 .header > img {
     height: 300px;
     width: 100%;
